--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,17 +23,11 @@
     </android.support.design.widget.AppBarLayout>
 
     <fragment
-        android:id="@+id/fragment2"
-        android:name="com.android.tripolis.boodilo.Fragments.AlarmAddFragment"
+        android:id="@+id/fragment"
+        android:name="com.android.tripolis.boodilo.Fragments.AlarmsListFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
-
-    <!--<include-->
-        <!--android:id="@+id/include"-->
-        <!--layout="@layout/content_alarms"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
 
 
 </android.support.design.widget.CoordinatorLayout>
