--- a/app/src/main/res/layout/alarms_list_fragment.xml
+++ b/app/src/main/res/layout/alarms_list_fragment.xml
@@ -2,11 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/alarmListTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:visibility="visible" />
 
     <ListView
         android:id="@+id/alarmsList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:entries="@array/alarm_entries_debug" />
+        android:entries="@array/alarm_entries_debug"
+        android:visibility="invisible" />
 </LinearLayout>
